# rust_db_talk

./: Cargo.toml  README.md  cargo.toml  docker-compose.yml
.github/workflows/: clippy.yml  rust.yml
connection-pool/: .env  Cargo.toml
connection-pool/src/: lib.rs  main.rs  test_fixtures.rs
connection_pool/: .env  Cargo.toml
connection_pool/src/: main.rs
migrations/diesel-migrations/: .env  CHALLENGE.md  Cargo.toml  README.md
migrations/diesel-migrations/migrations/2023-11-15-045526_create_diesel_test_table/: up.sql
migrations/diesel-migrations/src/: main.rs  schema.rs
migrations/sqlx-migrations/: CHALLENGE.md  Cargo.toml  README.md
migrations/sqlx-migrations/migrations/: 20231115041202_test_table.sql  20231202081614_sqlx_migration_challenge_table.sql
migrations/sqlx-migrations/src/: main.rs
partitions/diesel_pg_table_partitions/: .env  CHALLENGE.md  Cargo.toml  README.md
partitions/diesel_pg_table_partitions/migrations/2023-11-29-033644_sales_table/: up.sql
partitions/diesel_pg_table_partitions/migrations/2023-12-02-121326_add_index_on_sale_date/: up.sql
partitions/diesel_pg_table_partitions/src/: main.rs  schema.rs
partitions/sqlx_enterprise_partitions/: .env  CHALLENGE.md  Cargo.toml  README.md
partitions/sqlx_enterprise_partitions/migrations/shared/migrations/: 20231123054309_public_tables.sql
partitions/sqlx_enterprise_partitions/migrations/tenant/migrations/: 20231123092747_tenant_tables.sql  20231123131518_default_visit_date_to_now.sql
partitions/sqlx_enterprise_partitions/seed/: insert_55_million_kenyans.sql
partitions/sqlx_enterprise_partitions/src/: main.rs  migration.rs  tenant.rs  test_fixtures.rs  visit_hospital.rs
query-and-indexing/diesel-publishers/: .env  CHALLENGE.md  Cargo.toml  README.md
query-and-indexing/diesel-publishers/migrations/2023-11-16-043428_initial_tables/: up.sql
query-and-indexing/diesel-publishers/migrations/2023-11-16-044710_insert_dummy_data/: up.sql
query-and-indexing/diesel-publishers/migrations/2023-12-02-102806_add_index_on_author_table/: up.sql
query-and-indexing/diesel-publishers/seed/: dummy_data.sql
query-and-indexing/diesel-publishers/src/: author.rs  fixtures.rs  main.rs  schema.rs
tracing-helpers/: Cargo.toml
tracing-helpers/src/: lib.rs
transactions/: .env  Cargo.toml  README.md
transactions/.sqlx/: query-20a0e33e48c1cffde62f2337408fc9828d12f7283a5de5792f2c664554f2772e.json  query-3d500dd29496414fecf4d6e31cddbbb11de9722fc0a06d24073d39c556a349e9.json  query-3eddc2d2cf4464f569a8ccbaea7b69a5174ffe93510478f1bc7b1b9903b894e6.json  query-8b65c147df463929697f2d440452eea607151747ecb30ce26b506714db760355.json  query-bcc4a844774d8780d41e215618ff7b884f9fdd029a60e60212c14b363d807268.json
transactions/migrations/: 20231121035327_setup_tables.sql  20231121042145_product_inventory_table.sql  20231121042458_populate_tables.sql
transactions/src/: create_product.rs  generate_report.rs  main.rs
