[workspace]
members = [
    "connection-pool",
    "migrations/*",
    "query-and-indexing/*",
    "tracing-helpers",
    "transactions",
    "partitions/*"
]


[workspace.dependencies]
anyhow = "1.0.75"
diesel = { version = "2.1.3", features = ["r2d2", "postgres", "serde_json", "numeric", "chrono"] }
diesel_migrations = "2.1.0"
dotenv-flow = "0.16.2"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid", "time", "chrono", "json", "bigdecimal" ] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93"}
itertools = "0.12.0"
clap = { version = "4.3.8", features = ["derive", "std"], default-features = false }
bigdecimal = "0.3.0"

# open telemetry dependencies
tracing = "0.1.36"
tracing-attributes = "0.1.23"
tracing-log = "0.1.3"
uuid = { version = "1.6.1", features = ["v4"] }
rstest = { version = "0.18.2" }
