[package]
name = "connection-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
testing = ["rstest"]

[lib]
name = "connection_pool"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
diesel = { workspace = true, features = ["postgres", "r2d2"] }
dotenv-flow.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
url = "2.5.0"
rstest = { version = "0.18.2", optional = true }

[dev-dependencies]
rstest.workspace = true
