[package]
name = "tracing_helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv-flow.workspace = true
anyhow.workspace = true
reqwest = { version = "0.11" }
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.19.0"
opentelemetry = { version = "0.19.0", features = ["metrics", "rt-tokio", "rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "0.12.0", features = ["http-proto", "reqwest-client"] }
tracing.workspace = true
tracing-log.workspace = true

