[package]
name = "sqlx-migrations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
dotenv-flow.workspace = true
sqlx.workspace = true
tokio.workspace = true

connection-pool = { path = "../../connection-pool", version = "*" }
